# cargo-gui

./: Cargo.toml  README.md  RUNx32.bat  RUNx64.bat
src/: Basic UI.glade  Basic UI.glade~  main.rs
src/data/: project.rs
