[package]
name = "cargo-gui"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glib = "0.10.3"

[dependencies.gtk]
version = "0.9.2"
features = ["v3_16"]

[dependencies.gio]
version = "0.9.1"
features = ["v2_44"]


#target = "x86_64-pc-windows-gnu"

# [target.'cfg(target_arch = "x86")'.dependencies]
# native = { path = "native/i686" }

# [target.'cfg(target_arch = "x86_64")'.dependencies]
# native = { path = "native/x86_64" }